src/Weaver.WebApp/packages/shared/src/components/code-block/code-block.module.scss
$line-height: var(--ant-line-height);
$gutter-width: 48px;

.gutter {
  display: flex;
  justify-content: space-between;
  align-items: stretch;
  height: 34px;
  gap: 0;
}

.tab {
  display: flex;
  align-items: center;
  gap: 6px;
  padding: 0 14px;
  flex-shrink: 0;
  border-radius: var(--ant-border-radius-sm) var(--ant-border-radius-sm) 0 0;
}

.code {
  &-body {
    display: flex;
    overflow-y: auto;
    overflow-x: auto;

    border-radius: 0 0 var(--ant-border-radius-lg) var(--ant-border-radius-lg);
  }

  &-gutter {    
    position: sticky;
    left: -0.05px;
    z-index: 2;
    flex-shrink: 0;
    width: $gutter-width;
  }

  &-content {
    flex: 1;
    min-width: 0;
  }

  &-line {
    &-number {
      text-align: right;
      padding: 0 10px 0 4px;
      user-select: none;
      border-right: 1px solid;
      height: $line-height;
      line-height: $line-height;

      &-text {
        opacity: 0.5;
        margin-bottom: 0 !important;
      }
    }

    &-content {
      padding: 0 16px 0px 16px;
      white-space: pre;
      height: $line-height;
      line-height: $line-height;

      &-text {
        margin-bottom: 0 !important;
      }
    }
  }
}

